--- a/src/AppShell.xaml
+++ b/src/AppShell.xaml
@@ -4,11 +4,18 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:FloofLog"
+    xmlns:pages="clr-namespace:FloofLog.Pages"
     Title="FloofLog">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <TabBar>
+        <ShellContent
+            Title="Dashboard"
+            ContentTemplate="{DataTemplate local:MainPage}"
+            Route="MainPage" />
+        <ShellContent
+            Title="My Pets"
+            ContentTemplate="{DataTemplate pages:ManagePetsPage}"
+            Route="ManagePetsPage" />
+    </TabBar>
 
 </Shell>
